...
    ) {
        // AppBar
        Row(
            modifier = Modifier
                .fillMaxWidth()
                .semantics {
                    contentDescription = "AddNoteScreen"
                }
                .background(
                    color = MaterialTheme.colorScheme.primary,
                )
                .padding(
                    horizontal = 16.dp,
...
            horizontalArrangement = Arrangement.SpaceBetween,
        ) {
            Icon(
                modifier = Modifier
                    .size(20.dp)
                    .semantics {
                        contentDescription = "Navigate Back"
                    }
                    .clickable {
                        viewModel.action(AddNoteAction.BackIconOnClick)
                    }
                ,
                painter = painterResource(id = R.drawable.baseline_arrow_back_24),
...
                tint = Color.White,
            )
            Icon(
                modifier = Modifier
                    .size(20.dp)
                    .semantics {
                        contentDescription = "Delete Note"
                    }
                    .clickable {
                        viewModel.action(AddNoteAction.ShowConfirmationDialog)
                    }
                ,
                painter = painterResource(id = R.drawable.baseline_delete_24),
...
            value = title.value,
            onValueChange = {
                viewModel.action(AddNoteAction.TitleOnValueChange(it))
            },
            modifier = Modifier
                .fillMaxWidth().semantics {
                    contentDescription = "Enter Title"
                },
            placeholder = {
                Text(text = "Enter Title")
            },
            textStyle = LocalTextStyle.current.copy(
                fontSize = 24.sp
...
            onValueChange = {
                viewModel.action(AddNoteAction.DescriptionOnValueChange(it))
            },
            modifier = Modifier
                .fillMaxWidth()
                .weight(1f).semantics {
                    contentDescription = "Enter Description"
                }
            ,
            placeholder = {
                Text(text = "Enter Description")
            }
        )
...
